# mydashboard-horizon

./: README.md  setup.cfg
mydashboard-horizon/: dashboard.py
mydashboard-horizon/mypanel/: panel.py  views.py
mydashboard-horizon/static/mydashboard/css/: style.css
mydashboard-horizon/static/mydashboard/js/: jquery.jsoneditor.js
mydashboard_horizon/mydashboard_openstack_dashboard/mypanel/: panel.py  restclient.py  urls.py
mydashboard_horizon/mydashboard_openstack_dashboard/mypanel/templates/mypanel/: index.html
mydashboard_horizon/mydashboard_openstack_dashboard/static/mydashboard/css/: jsoneditor.css
mydashboard_horizon/mydashboard_openstack_dashboard/static/mydashboard/js/: jsoneditor.js
mydashboard_horizon/mydashboard_openstack_dashboard/templates/mydashboard/: _scripts.html  base.html
openstack_dashboard_extensions/: _50_mydashboard.py
