[metadata]
name = mydashboard-horizon
summary = mydashboard plugin for Horizon
description-file =
    README.md
author = Rakesh
author-email = rakesh.podishetty@calsoftinc.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Python Developers
    Intended Audience :: Openstack Technology
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2.7


[files]
packages =
    mydashboard_horizon
    mydashboard_horizon.mydashboard_openstack_dashboard
namespace_packages =
    mydashboard_horizon

[global]
setup-hooks =
    pbr.hooks.setup_hook
